--- a/index.html
+++ b/index.html
@@ -32,38 +32,48 @@
       padding: 15px;
     }
 
-    /* CARROSSEL SIMPLES */
+    /* ✅ CARROSSEL AUTOMÁTICO */
     .carousel img {
       width: 100%;
-      border-radius: 12px;
+      border-radius: 14px;
       margin-bottom: 10px;
+      transition: opacity 0.5s ease;
     }
 
-    /* BARRA DE PROGRESSO */
+    /* ✅ PROGRESSO MODERNO */
     .progress-box {
       background: white;
       color: black;
-      padding: 15px;
-      border-radius: 12px;
+      padding: 18px;
+      border-radius: 14px;
       margin-top: 20px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.25);
     }
 
-    .progress-bar {
+    .modern-progress {
       width: 100%;
-      height: 18px;
+      height: 14px;
       background: #eee;
-      border-radius: 20px;
+      border-radius: 50px;
       overflow: hidden;
       margin-top: 10px;
     }
 
-    .progress-fill {
+    .modern-fill {
       width: 45%;
       height: 100%;
-      background: #28a745;
+      background: linear-gradient(90deg, #00c853, #b2ff59);
+      border-radius: 50px;
+      transition: width 0.5s ease;
     }
 
-    /* BOTÕES */
+    .progress-percent {
+      font-size: 13px;
+      margin-top: 8px;
+      color: #444;
+    }
+
+    /* ✅ BOTÕES */
     .donate-buttons {
       margin-top: 20px;
       display: grid;
@@ -76,7 +86,7 @@
       font-size: 18px;
       font-weight: bold;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
       background: #ff9800;
       color: white;
@@ -85,9 +95,10 @@
 
     .donate-buttons button:hover {
       transform: scale(1.05);
+      opacity: 0.9;
     }
 
-    /* CTA PRINCIPAL */
+    /* ✅ CTA PRINCIPAL */
     .cta {
       margin-top: 25px;
     }
@@ -99,30 +110,60 @@
       font-weight: bold;
       background: #00c853;
       border: none;
-      border-radius: 12px;
+      border-radius: 14px;
       cursor: pointer;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.35);
+      transition: 0.2s;
     }
 
-    /* PROVAS SOCIAIS */
-    .proof {
+    .cta button:hover {
+      transform: scale(1.03);
+    }
+
+    /* ✅ PROVAS SOCIAIS ESTILO FACEBOOK */
+    .fb-comments {
       background: white;
       color: black;
-      padding: 15px;
-      border-radius: 12px;
+      padding: 18px;
+      border-radius: 14px;
       margin-top: 25px;
       text-align: left;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.25);
+    }
+
+    .fb-comments h3 {
+      margin: 0;
+      font-size: 16px;
+    }
+
+    .fb-comment {
+      display: flex;
+      gap: 10px;
+      margin-top: 18px;
+    }
+
+    .fb-comment img {
+      width: 42px;
+      height: 42px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .fb-comment p {
+      margin: 4px 0;
       font-size: 14px;
+      line-height: 1.4;
     }
 
-    .proof strong {
-      display: block;
-      margin-bottom: 6px;
+    .fb-comment span {
+      font-size: 12px;
+      color: gray;
     }
 
-    /* IMAGENS REABILITADOS */
+    /* ✅ GALERIA */
     .gallery img {
       width: 100%;
-      border-radius: 12px;
+      border-radius: 14px;
       margin-top: 12px;
     }
 
@@ -144,21 +185,44 @@
 
     <h1>Sua ajuda pode ser a única esperança desses animais 😓</h1>
 
-    <!-- CARROSSEL -->
+    <!-- ✅ CARROSSEL AUTOMÁTICO -->
     <div class="carousel">
-      <img src="images/carrossel-1.jpg">
-      <img src="images/carrossel-2.jpg">
-      <img src="images/carrossel-3.jpg">
+      <img id="carousel-img" src="images/carrossel-1.jpg" alt="Carrossel">
     </div>
 
-    <!-- PROGRESSO -->
+    <!-- ✅ SCRIPT DO CARROSSEL -->
+    <script>
+      const images = [
+        "images/carrossel-1.jpg",
+        "images/carrossel-2.jpg",
+        "images/carrossel-3.jpg"
+      ];
+
+      let index = 0;
+      const carousel = document.getElementById("carousel-img");
+
+      setInterval(() => {
+        index = (index + 1) % images.length;
+        carousel.style.opacity = 0;
+
+        setTimeout(() => {
+          carousel.src = images[index];
+          carousel.style.opacity = 1;
+        }, 300);
+
+      }, 3000);
+    </script>
+
+    <!-- ✅ PROGRESSO MODERNO -->
     <div class="progress-box">
       <strong>Meta arrecadada até agora</strong>
-      <p>R$ 9.450 de R$ 20.000</p>
+      <p><b>R$ 9.450</b> de <b>R$ 20.000</b></p>
 
-      <div class="progress-bar">
-        <div class="progress-fill"></div>
+      <div class="modern-progress">
+        <div class="modern-fill"></div>
       </div>
+
+      <p class="progress-percent">45% da meta alcançada</p>
     </div>
 
     <!-- BOTÕES DE VALOR -->
@@ -175,17 +239,41 @@
 
     <!-- CTA PRINCIPAL -->
     <div class="cta">
-      <button onclick="alert('Checkout será conectado depois')">
+      <button onclick="alert('Checkout Mercado Pago será conectado depois')">
         QUERO DOAR AGORA ❤️
       </button>
     </div>
 
-    <!-- PROVAS SOCIAIS -->
-    <div class="proof">
-      <strong>❤️ Provas sociais</strong>
-      “Doei R$50 e recebi atualização no Instagram!” – Juliana<br><br>
-      “Projeto sério, acompanho há meses.” – Marcos<br><br>
-      “Eles realmente resgatam animais, já vi pessoalmente.” – Renata
+    <!-- ✅ PROVAS SOCIAIS ESTILO FACEBOOK -->
+    <div class="fb-comments">
+      <h3>💬 Comentários</h3>
+
+      <div class="fb-comment">
+        <img src="images/user1.png">
+        <div>
+          <strong>Juliana Costa</strong>
+          <p>Projeto muito sério, já ajudei e acompanho sempre 🙏</p>
+          <span>Curtir · Responder · 2h</span>
+        </div>
+      </div>
+
+      <div class="fb-comment">
+        <img src="images/user2.png">
+        <div>
+          <strong>Marcos Almeida</strong>
+          <p>Que Deus abençoe vocês, trabalho lindo demais ❤️</p>
+          <span>Curtir · Responder · 5h</span>
+        </div>
+      </div>
+
+      <div class="fb-comment">
+        <img src="images/user3.png">
+        <div>
+          <strong>Renata Silva</strong>
+          <p>Compartilhando agora, espero que cheguem na meta!</p>
+          <span>Curtir · Responder · 1d</span>
+        </div>
+      </div>
     </div>
 
     <!-- GALERIA -->
@@ -202,7 +290,8 @@
     <!-- QUEM SOMOS -->
     <h2 style="margin-top:30px;">Quem somos?</h2>
 
-    <img src="images/Abrigo-temporario-para-caes.jpg" style="width:100%; border-radius:12px;">
+    <img src="images/Abrigo-temporario-para-caes.jpg"
+         style="width:100%; border-radius:14px;">
 
     <p style="text-align:left; margin-top:15px; line-height:1.5;">
       Começamos há mais de +20 anos atrás, com um grupo de protetores
