--- a/index.html
+++ b/index.html
@@ -180,18 +180,19 @@
   <h2 style="margin-top:25px;">Escolha um valor para doar</h2>
 
   <div class="donate-buttons">
-    <button>R$ 30</button>
-    <button>R$ 50</button>
-    <button>R$ 75</button>
-    <button>R$ 100</button>
-    <button>R$ 150</button>
-    <button>R$ 200</button>
-  </div>
+  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/6997f65544'">R$ 30</button>
+  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/f8c508b181'">R$ 50</button>
+  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/546075ea4f'">R$ 75</button>
+  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/8a22bb044f'">R$ 100</button>
+  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/1173264c29'">R$ 150</button>
+  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/dcb722d870'">R$ 200</button>
+</div>
+
 
   <!-- CTA -->
   <div class="cta">
     <button onclick="alert('Checkout Mercado Pago será conectado depois')">
-      QUERO DOAR AGORA ❤️
+      QUERO DOAR AGORA 
     </button>
   </div>
 
