--- a/index.html
+++ b/index.html
@@ -31,206 +31,4 @@
       padding: 15px;
     }
 
-    /* ✅ CARROSSEL PRINCIPAL RETANGULAR */
-    .carousel img {
-      width: 100%;
-      height: 230px;
-      object-fit: cover;
-      border-radius: 0px;
-      transition: opacity 0.5s ease;
-      border: 2px solid #222;
-    }
-
-    /* ✅ PROGRESSO COM NEON */
-    .progress-box {
-      background: #111;
-      padding: 18px;
-      margin-top: 20px;
-      border-radius: 12px;
-      border: 1px solid #222;
-    }
-
-    .modern-progress {
-      width: 100%;
-      height: 16px;
-      background: #222;
-      border-radius: 50px;
-      overflow: hidden;
-      margin-top: 12px;
-      box-shadow: 0 0 12px rgba(0,255,100,0.3);
-    }
-
-    .modern-fill {
-      width: 45%;
-      height: 100%;
-      background: linear-gradient(90deg, #00ff99, #00c853);
-      box-shadow: 0 0 18px #00ff99;
-      transition: width 0.5s ease;
-    }
-
-    .progress-percent {
-      font-size: 13px;
-      margin-top: 10px;
-      color: #aaa;
-    }
-
-    /* ✅ BOTÕES */
-    .donate-buttons {
-      margin-top: 20px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px;
-    }
-
-    .donate-buttons button {
-      padding: 15px;
-      font-size: 18px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      background: #ff9800;
-      color: white;
-      border-radius: 10px;
-    }
-
-    /* CTA */
-    .cta {
-      margin-top: 25px;
-    }
-
-    .cta button {
-      width: 100%;
-      padding: 18px;
-      font-size: 20px;
-      font-weight: bold;
-      background: #00ff99;
-      border: none;
-      cursor: pointer;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,255,150,0.4);
-    }
-
-    /* ✅ SEGUNDO CARROSSEL (GALERIA) */
-    .gallery-carousel img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 0px;
-      border: 2px solid #222;
-      transition: opacity 0.5s ease;
-    }
-
-    footer {
-      margin: 30px 0;
-      font-size: 13px;
-      opacity: 0.7;
-    }
-  </style>
-</head>
-
-<body>
-
-<header>
-  <img src="images/ppnngg.png" alt="Logo ONG">
-</header>
-
-<div class="container">
-
-  <h1>Sua ajuda pode ser a única esperança desses animais 😓</h1>
-
-  <!-- ✅ CARROSSEL PRINCIPAL -->
-  <div class="carousel">
-    <img id="carousel-img" src="images/carrossel-1.jpg">
-  </div>
-
-  <script>
-    const images = [
-      "images/carrossel-1.jpg",
-      "images/carrossel-2.jpg",
-      "images/carrossel-3.jpg"
-    ];
-
-    let index = 0;
-    const carousel = document.getElementById("carousel-img");
-
-    setInterval(() => {
-      index = (index + 1) % images.length;
-      carousel.style.opacity = 0;
-
-      setTimeout(() => {
-        carousel.src = images[index];
-        carousel.style.opacity = 1;
-      }, 300);
-    }, 3000);
-  </script>
-
-  <!-- ✅ PROGRESSO NEON -->
-  <div class="progress-box">
-    <strong>Meta arrecadada até agora</strong>
-    <p><b>R$ 9.450</b> de <b>R$ 20.000</b></p>
-
-    <div class="modern-progress">
-      <div class="modern-fill"></div>
-    </div>
-
-    <p class="progress-percent">45% da meta alcançada</p>
-  </div>
-
-  <!-- BOTÕES -->
-  <h2 style="margin-top:25px;">Escolha um valor para doar</h2>
-
-  <div class="donate-buttons">
-  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/6997f65544'">R$ 30</button>
-  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/f8c508b181'">R$ 50</button>
-  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/546075ea4f'">R$ 75</button>
-  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/8a22bb044f'">R$ 100</button>
-  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/1173264c29'">R$ 150</button>
-  <button onclick="window.location.href='https://ambienteseguro.org.ua/c/dcb722d870'">R$ 200</button>
-</div>
-
-
-  <!-- CTA -->
-  <div class="cta">
-    <button onclick="alert('Checkout Mercado Pago será conectado depois')">
-      QUERO DOAR AGORA 
-    </button>
-  </div>
-
-  <!-- ✅ GALERIA AGORA EM CARROSSEL -->
-  <h2 style="margin-top:30px;">Nossos cãezinhos reabilitados:</h2>
-
-  <div class="gallery-carousel">
-    <img id="gallery-img" src="images/LADOALADO-_1_.webp">
-  </div>
-
-  <script>
-    const galleryImages = [
-      "images/LADOALADO-_1_.webp",
-      "images/LADOALADO-_2_.webp",
-      "images/LADOALADO-_3_.webp",
-      "images/LADOALADO-_4_.webp",
-      "images/LADOALADO-_6_.webp"
-    ];
-
-    let gIndex = 0;
-    const gallery = document.getElementById("gallery-img");
-
-    setInterval(() => {
-      gIndex = (gIndex + 1) % galleryImages.length;
-      gallery.style.opacity = 0;
-
-      setTimeout(() => {
-        gallery.src = galleryImages[gIndex];
-        gallery.style.opacity = 1;
-      }, 300);
-    }, 2500);
-  </script>
-
-  <footer>
-    ONG Vidas Resgatadas – Obrigado por ajudar 🙏🐾
-  </footer>
-
-</div>
-
-</body>
-</html>
+    /* ✅ CARRO*
