--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #d6ecff;
-      color: white;
+      color: black;
       text-align: center;
     }
 
@@ -157,7 +157,7 @@
 
 <div class="container">
 
-  <h1>Sua ajuda pode ser a única esperança desses animais 😓</h1>
+  <h1>Sua ajuda pode ser a única esperança desses animais </h1>
 
   <!-- ✅ CARROSSEL PRINCIPAL -->
   <div class="carousel">
@@ -212,7 +212,7 @@
   <!-- CTA -->
   <div class="cta">
     <button>
-      QUERO DOAR AGORA ❤️
+      QUERO DOAR AGORA 
     </button>
   </div>
 
