--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #d6ecff;
+      background: linear-gradient(180deg, #d6ecff, #ffffff);
       color: black;
       text-align: center;
     }
