--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ajude os Animais – Vidas Resgatadas</title>
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background: linear-gradient(180deg, #d6ecff, #ffffff);
       color: black;
       text-align: center;
@@ -41,14 +41,17 @@
       border: 2px solid #222;
     }
 
-    /* ✅ PROGRESSO NEON */
-    .progress-box {
-      background: #111;
-      padding: 18px;
-      margin-top: 20px;
-      border-radius: 12px;
-      border: 1px solid #222;
-    }
+    /* ✅ PROGRESSO (CAIXA CLARA) */
+.progress-box {
+  background: #f0f8ff;   /* azul clarinho */
+  padding: 18px;
+  margin-top: 20px;
+  border-radius: 12px;
+  border: 1px solid #bcdcff;
+  color: black;          /* texto preto */
+  box-shadow: 0 0 12px rgba(0,0,0,0.08);
+}
+
 
     .modern-progress {
       width: 100%;
@@ -71,7 +74,7 @@
     .progress-percent {
       font-size: 13px;
       margin-top: 10px;
-      color: #aaa;
+      color: #333;
     }
 
     /* ✅ BOTÕES VERDES */
