--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
   <h2 style="margin-top:25px;">Escolha um valor para doar</h2>
 
   <div class="donate-buttons">
-    <button onclick="window.location.href='COLE_SEU_LINK_AQUI_30'">R$ 30</button>
-    <button onclick="window.location.href='COLE_SEU_LINK_AQUI_50'">R$ 50</button>
-    <button onclick="window.location.href='COLE_SEU_LINK_AQUI_75'">R$ 75</button>
-    <button onclick="window.location.href='COLE_SEU_LINK_AQUI_100'">R$ 100</button>
-    <button onclick="window.location.href='COLE_SEU_LINK_AQUI_150'">R$ 150</button>
-    <button onclick="window.location.href='COLE_SEU_LINK_AQUI_200'">R$ 200</button>
+    <button onclick="window.location.href='https://ambienteseguro.org.ua/c/6997f65544'">R$ 30</button>
+    <button onclick="window.location.href='https://ambienteseguro.org.ua/c/f8c508b181'">R$ 50</button>
+    <button onclick="window.location.href='https://ambienteseguro.org.ua/c/546075ea4f'">R$ 75</button>
+    <button onclick="window.location.href='https://ambienteseguro.org.ua/c/8a22bb044f'">R$ 100</button>
+    <button onclick="window.location.href='https://ambienteseguro.org.ua/c/1173264c29'">R$ 150</button>
+    <button onclick="window.location.href='https://ambienteseguro.org.ua/c/dcb722d870'">R$ 200</button>
   </div>
 
   <!-- CTA -->
@@ -278,7 +278,7 @@
   </div>
 
   <footer>
-    ONG Vidas Resgatadas – Obrigado por ajudar 🙏🐾
+    ONG Vidas Resgatadas – Obrigado por ajudar🐾
   </footer>
 
 </div>
